--- a/camels_hourly_features_engineering.ipynb
+++ b/camels_hourly_features_engineering.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-23T13:32:13.388231Z",
-     "start_time": "2024-09-23T13:32:11.314201Z"
+     "end_time": "2024-10-05T07:00:26.382716Z",
+     "start_time": "2024-10-05T07:00:23.590895Z"
     }
    },
    "source": [
@@ -23,7 +23,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T13:32:16.252568Z",
+     "end_time": "2024-10-02T14:24:20.590433600Z",
      "start_time": "2024-09-23T13:32:13.408305Z"
     }
    },
@@ -280,7 +280,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T13:32:18.412361Z",
+     "end_time": "2024-10-02T14:24:20.608554600Z",
      "start_time": "2024-09-23T13:32:16.397114Z"
     }
    },
@@ -316,7 +316,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T13:32:18.503056Z",
+     "end_time": "2024-10-02T14:24:20.609556500Z",
      "start_time": "2024-09-23T13:32:18.479417Z"
     }
    },
@@ -344,7 +344,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T13:32:20.444098Z",
+     "end_time": "2024-10-02T14:24:20.609556500Z",
      "start_time": "2024-09-23T13:32:18.546414Z"
     }
    },
@@ -375,7 +375,7 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T13:34:53.949531Z",
+     "end_time": "2024-10-02T14:24:20.609556500Z",
      "start_time": "2024-09-23T13:34:53.617513Z"
     }
    },
@@ -404,7 +404,8 @@
      "is_executing": true
     },
     "ExecuteTime": {
-     "start_time": "2024-09-23T13:34:58.109129Z"
+     "end_time": "2024-10-02T14:24:20.610549600Z",
+     "start_time": "2024-09-23T14:37:54.478186Z"
     }
    },
    "cell_type": "code",
@@ -423,11 +424,28 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/200\n",
-      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m45s\u001B[0m 584ms/step - loss: 20.8464 - val_loss: 12.7482\n",
+      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m44s\u001B[0m 576ms/step - loss: 0.0876 - val_loss: 0.0583\n",
       "Epoch 2/200\n",
-      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m46s\u001B[0m 601ms/step - loss: 18.5034 - val_loss: 11.7221\n",
+      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m46s\u001B[0m 607ms/step - loss: 0.0735 - val_loss: 0.0594\n",
       "Epoch 3/200\n",
-      "\u001B[1m26/75\u001B[0m \u001B[32m━━━━━━\u001B[0m\u001B[37m━━━━━━━━━━━━━━\u001B[0m \u001B[1m9s\u001B[0m 197ms/step - loss: 7.9848"
+      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m46s\u001B[0m 610ms/step - loss: 0.1768 - val_loss: 0.0622\n",
+      "Epoch 4/200\n",
+      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m47s\u001B[0m 617ms/step - loss: 0.1161 - val_loss: 0.3797\n",
+      "Epoch 5/200\n",
+      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m44s\u001B[0m 581ms/step - loss: 0.8457 - val_loss: 0.2387\n",
+      "Epoch 6/200\n",
+      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m48s\u001B[0m 624ms/step - loss: 0.2012 - val_loss: 0.1477\n",
+      "Epoch 7/200\n",
+      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m48s\u001B[0m 627ms/step - loss: 0.1661 - val_loss: 0.0851\n",
+      "Epoch 8/200\n",
+      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m47s\u001B[0m 617ms/step - loss: 0.0730 - val_loss: 0.0770\n",
+      "Epoch 9/200\n",
+      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m42s\u001B[0m 555ms/step - loss: 0.0865 - val_loss: 0.1810\n",
+      "Epoch 10/200\n",
+      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m49s\u001B[0m 644ms/step - loss: 1.8302 - val_loss: 0.1624\n",
+      "Epoch 11/200\n",
+      "\u001B[1m75/75\u001B[0m \u001B[32m━━━━━━━━━━━━━━━━━━━━\u001B[0m\u001B[37m\u001B[0m \u001B[1m51s\u001B[0m 667ms/step - loss: 0.5545 - val_loss: 0.7205\n",
+      "Epoch 12/200\n"
      ]
     }
    ],
