--- a/lstm.ipynb
+++ b/lstm.ipynb
@@ -83,7 +83,7 @@
     "                           horizon=horizon,\n",
     "                           target=\"streamflow\",\n",
     "                           batch_size=batchsize,\n",
-    "                            # features_lookback=['streamflow'],\n",
+    "                           # features_lookback=['streamflow'],\n",
     "                           features_bidirectional=['prcp(mm/day)', 'srad(W/m2)', 'tmax(C)', 'tmin(C)', 'vp(Pa)'],\n",
     "                           )"
    ],
@@ -153,7 +153,7 @@
    "source": [
     "from hydronetwork.model import encoder_decoder_lstm\n",
     "from hydronetwork.train import WarmupExponentialDecay, callback_for_features_selection\n",
-    "from hydronetwork.evaluate.metric import rmse, nse\n",
+    "from hydronetwork.evaluate.metrics import rmse, nse\n",
     "from keras.src.optimizers import AdamW\n",
     "                                                                      \n",
     "model = encoder_decoder_lstm(features_type=[\"bidirectional\",], lookback=lookback, horizon=horizon)\n",
